--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,8 @@
         </section>
 
     </main>
-    <script src="../JS/main.js" />
+    <script src="../JS/main.js">
+    </script>
 </body>
 </html>
 
