--- a/HTML/resultados.html
+++ b/HTML/resultados.html
@@ -26,14 +26,17 @@
             <span class="usuario">Usuario</span>
             <p>, ¡Aquí están tus resultados!</p>
         </div>
+        <div id="resultados">
+
+        </div>
         <div class="de-nuevo">
             <button>
-                <a href="./trivia1.html">Jugar de Nuevo</a>
+                <a href="./trivia1.html" onclick="clearStorage()">Jugar de Nuevo</a>
             </button>
         </div>
         <div class="salir">
             <button>
-                <a href="./index.html">Salir</a>
+                <a href="./index.html" onclick="clearStorage()">Salir</a>
             </button>
         </div>
         </main>
