--- a/HTML/trivia1.html
+++ b/HTML/trivia1.html
@@ -28,18 +28,18 @@
       </div>
       <section class="botones-trivia">
         <div class="botones-trivia-op-sup">
-          <div class="op1" onclick="onOptionSelected()">
+          <div class="op1" onclick="onOptionSelected('op1')">
             <span>Mi VR standalone</span>
           </div>
-          <div class="op2" onclick="onOptionSelected()">
+          <div class="op2" onclick="onOptionSelected('op2')">
             <span>Asus</span>
           </div>
         </div>
         <div class="botones-trivia-op-inf">
-          <div class="op3" onclick="onOptionSelected()">
+          <div class="op3" onclick="onOptionSelected('op3')">
             <span>HTC Vive</span>
           </div>
-          <div class="op4" onclick="onOptionSelected()">
+          <div class="op4" onclick="onOptionSelected('op4')">
             <span>Meta</span>
           </div>
         </div>
@@ -51,6 +51,7 @@
         <a href="./trivia2.html">Saltar pregunta</a>
       </div>
     </main>
-    <script src="../JS/trivia1.js" />
+    <script src="../JS/trivia1.js" >
+    </script>
   </body>
 </html>
