--- a/HTML/trivia2.html
+++ b/HTML/trivia2.html
@@ -28,18 +28,18 @@
         </div>
         <section class="botones-trivia">
             <div class="botones-trivia-op-sup">
-            <div class="op1" onclick="onOptionSelected()">
+            <div class="op1" onclick="onOptionSelected('op1')">
                 <span>Pistol Whip</span>
             </div>
-            <div class="op2" onclick="onOptionSelected()">
+            <div class="op2" onclick="onOptionSelected('op2')">
                 <span>Oh!Shape</span>
             </div>
             </div>
             <div class="botones-trivia-op-inf">
-            <div class="op3" onclick="onOptionSelected()">
+            <div class="op3" onclick="onOptionSelected('op3')">
                 <span>Synth Riders</span>
             </div>
-            <div class="op4" onclick="onOptionSelected()">
+            <div class="op4" onclick="onOptionSelected('op4')">
                 <span>Beat Saber</span>
             </div>
             </div>
