--- a/HTML/trivia3.html
+++ b/HTML/trivia3.html
@@ -28,18 +28,18 @@
         </div>
         <section class="botones-trivia">
             <div class="botones-trivia-op-sup">
-            <div class="op1" onclick="onOptionSelected()">
-                <span>Mincraft</span>
+            <div class="op1" onclick="onOptionSelected('op1')">
+                <span>Minecraft</span>
             </div>
-            <div class="op2" onclick="onOptionSelected()">
+            <div class="op2" onclick="onOptionSelected('op2')">
                 <span>League of Legends</span>
             </div>
             </div>
             <div class="botones-trivia-op-inf">
-            <div class="op3" onclick="onOptionSelected()">
+            <div class="op3" onclick="onOptionSelected('op3')">
                 <span>Fortnite</span>
             </div>
-            <div class="op4" onclick="onOptionSelected()">
+            <div class="op4" onclick="onOptionSelected('op4')">
                 <span>Fall Guys</span>
             </div>
             </div>
