--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,8 +31,7 @@
         </section>
 
     </main>
-    <script src="../JS/main.js">
-    </script>
+    <script src="../JS/main.js"></script>
 </body>
 </html>
 
