--- a/HTML/resultados.html
+++ b/HTML/resultados.html
@@ -40,6 +40,6 @@
             </button>
         </div>
         </main>
-        <script src="../JS/respuestas.js" />
+        <script src="../JS/respuestas.js" ></script>
     </body>
 </html>
