--- a/HTML/trivia1.html
+++ b/HTML/trivia1.html
@@ -51,7 +51,6 @@
         <a href="./trivia2.html">Saltar pregunta</a>
       </div>
     </main>
-    <script src="../JS/trivia1.js" >
-    </script>
+    <script src="../JS/trivia1.js" ></script>
   </body>
 </html>
