--- a/HTML/trivia2.html
+++ b/HTML/trivia2.html
@@ -51,6 +51,6 @@
             <a href="./trivia3.html">Saltar pregunta</a>
         </div>
         </main>
-        <script src="../JS/trivia2.js" />
+        <script src="../JS/trivia2.js" ></script>
     </body>
 </html>
