--- a/HTML/trivia3.html
+++ b/HTML/trivia3.html
@@ -51,6 +51,6 @@
             <a href="./resultados.html">Saltar pregunta</a>
         </div>
         </main>
-        <script src="../JS/trivia3.js" />
+        <script src="../JS/trivia3.js" ></script>
     </body>
 </html>
