Agregando diseño de la vista de resultados

--- a/HTML/resultados.html
+++ b/HTML/resultados.html
@@ -27,17 +27,25 @@
             <p>, ¡Aquí están tus resultados!</p>
         </div>
         <div id="resultados">
-
         </div>
-        <div class="de-nuevo">
-            <button>
-                <a href="./trivia1.html" onclick="clearStorage()">Jugar de Nuevo</a>
-            </button>
+        <div class="gif">
+            <img src="https://media.giphy.com/media/dchERAZ73GvOE/giphy.gif">
         </div>
-        <div class="salir">
-            <button>
-                <a href="./index.html" onclick="clearStorage()">Salir</a>
-            </button>
+        <div class="textos">
+            <span>¡Eres todo un genio de la realidad virtual!</span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+        <div class="botones-finales">
+            <div class="de-nuevo">
+                <button>
+                    <a href="./trivia1.html" onclick="clearStorage()">Jugar de Nuevo</a>
+                </button>
+            </div>
+            <div class="salir">
+                <button>
+                    <a href="./index.html" onclick="clearStorage()">Salir</a>
+                </button>
+            </div>
         </div>
         </main>
         <script src="../JS/respuestas.js" ></script>
