cambios en index

--- a/HTML/resultados.html
+++ b/HTML/resultados.html
@@ -43,7 +43,7 @@
             </div>
             <div class="salir">
                 <button>
-                    <a href="./index.html" onclick="clearStorage()">Salir</a>
+                    <a href="../index.html" onclick="clearStorage()">Salir</a>
                 </button>
             </div>
         </div>
