--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="main-inferior-boton">
                 <button>
-                    <a onclick="sendName()" href="./trivia1.html">Comenzar</a>
+                    <a onclick="sendName()" href="./HTML/trivia1.html">Comenzar</a>
                 </button>
             </div>
         </section>
