modificacion a la hoja de estilos de index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&family=Fredoka+One&family=Train+One&display=swap" rel="stylesheet">
     <title>TRIVIA VS</title>
-    <link rel="stylesheet" type="text/css" href="../Styles/style_index.css"/>
+    <link rel="stylesheet" type="text/css" href="./Styles/style_index.css"/>
 </head>
 <body>
     <main>
